# accel-ppp-ng

./: .gitignore  CLA.md  CMakeLists.txt  CODEOWNERS  README
.github/workflows/: add-pr-labels.yml  add-rebase-label.yml  auto-author-assign.yml  build-and-run.yml  check-pr-conflicts.yml  check-pr-message.yml  check-stale.yml  check-unused-imports.yml  cla.yml  codeql.yml  label-backport.yml  lint-with-ruff.yml  run-tests-32bit.yml  run-tests-bigendian.yml  run-tests.yml  sonarcloud.yml
accel-pppd/: CMakeLists.txt  accel-ppp.conf  accel-ppp.conf.5  accel_iputils.c  ifcfg.c  main.c  session.c
accel-pppd/auth/: auth_chap_md5.c  auth_mschap_v1.c  auth_mschap_v2.c
accel-pppd/ctrl/ipoe/: ipoe.c
accel-pppd/ctrl/l2tp/: l2tp.c  packet.c
accel-pppd/ctrl/pppoe/: pppoe.c  pppoe.h  (+2 more)
accel-pppd/extra/: chap-secrets.c
accel-pppd/include/: accel_iputils.h  ap_session.h  vppiputils.h  vpppoe.h  vpputils.h
accel-pppd/ipv6/: dhcpv6.c  nd.c
accel-pppd/libnetlink/: iputils.c  new_link_event.c  rt_names.c  rt_names.h
accel-pppd/ppp/: ppp.c  ppp.h  ppp_ccp.c
accel-pppd/radius/: acct.c  auth.c  dm_coa.c  radius.c  serv.c
accel-pppd/session_hooks/: CMakeLists.txt
accel-pppd/session_hooks/vpp/: CMakeLists.txt  vpphooks.c  vpputils.h
accel-pppd/session_hooks/vyos_vpp/: CMakeLists.txt  vpphooks.c  vpphooks.h  vppiputils.c  vpppoe.c  vpppolicer.c  vpppolicer.h  vpputils.c
accel-pppd/shaper/: limiter.c
accel-pppd/vpputils/: vppiputils.c  vppipv6layer.c  vpppoe.c  vpppolicer.c  vpputils.c
cmake/: cpack.cmake
drivers/ipoe/: ipoe.c
signatures/version1/: cla.json
(+1 files in other folders)
